--- a/BasicSQLite/app/src/main/res/layout/activity_main.xml
+++ b/BasicSQLite/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,12 @@
     >
 
     <EditText
+        android:id="@+id/idField"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="ID"
+        />
+    <EditText
         android:id="@+id/nameField"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -21,6 +27,55 @@
         android:hint="E-mail"
         />
 
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/btnUpdateById"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="UpdateBy ID"
+            android:textAllCaps="false"
+            />
+        <Button
+            android:id="@+id/btnDeleteById"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="DeleteBy ID"
+            android:textAllCaps="false"
+            />
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/btnUpdateByName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="UpdateBy NAME"
+            android:textAllCaps="false"
+            />
+        <Button
+            android:id="@+id/btnDeleteByName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="DeleteBy NAME"
+            android:textAllCaps="false"
+            />
+    </LinearLayout>
+
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -32,13 +87,15 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Add"
+            android:textAllCaps="false"
             />
         <Button
             android:id="@+id/btnRead"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="read"
+            android:text="Read"
+            android:textAllCaps="false"
             />
         <Button
             android:id="@+id/btnClear"
@@ -46,6 +103,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Clear"
+            android:textAllCaps="false"
             />
     </LinearLayout>
 </LinearLayout>
